feat(wf-exchange-entity): return next action on empty participate body
